# smallbizpal

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  a2as.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
customer_engagement/: agent.py  config.py
customer_engagement/tools/: knowledge_base_tools.py  meeting_tools.py
docs/: ARCHITECTURE.md  CUSTOMER_ENGAGEMENT_SETUP.md  INSTALLATION.md  USAGE_GUIDE.md  smallbizpal-architecture.mmd
smallbizpal/: __init__.py  agent.py
smallbizpal/agents/: __init__.py
smallbizpal/agents/business_discovery/: __init__.py  agent.py  config.py
smallbizpal/agents/business_discovery/tools/: __init__.py  input_tools.py  storage_tools.py
smallbizpal/agents/customer_engagement/: __init__.py  agent.py  config.py
smallbizpal/agents/customer_engagement/tools/: __init__.py  knowledge_base_tools.py  meeting_tools.py
smallbizpal/agents/kb_proxy/: __init__.py  agent.py  config.py
smallbizpal/agents/kb_proxy/tools/: __init__.py  knowledge_search_tools.py
smallbizpal/agents/marketing_generator/: __init__.py  agent.py  config.py
smallbizpal/agents/marketing_generator/sub_agents/: __init__.py
smallbizpal/agents/marketing_generator/tools/: __init__.py  business_data_tools.py  storage_tools.py
smallbizpal/agents/orchestrator/: __init__.py  agent.py  config.py
smallbizpal/agents/orchestrator/tools/: __init__.py
smallbizpal/agents/performance_reporting/: __init__.py  agent.py  config.py
smallbizpal/agents/performance_reporting/tools/: __init__.py  (+2 more)
smallbizpal/callbacks/: logging_callbacks.py
smallbizpal/config/: README.md  __init__.py  agent_config_template.py  constants.py  models.py  settings.py
smallbizpal/scripts/: validate_config.py
smallbizpal/shared/: __init__.py
smallbizpal/shared/models/: __init__.py  business_profile.py
smallbizpal/shared/services/: __init__.py  knowledge_base.py
smallbizpal/shared/utils/: __init__.py  logging.py
tests/: __init__.py  test_basic.py  test_user_specific_storage.py
(+2 files in other folders)
